--- a/pages/dashboard/index.html
+++ b/pages/dashboard/index.html
@@ -14,79 +14,36 @@
     <link rel="icon" href="../../assets/img/favicon.ico" type="image/x-icon">
 </head>
 <body>
+
+    <!-- Encabezado principal -->
     <header>
+        <div id="barra-principal">
+            <a href="index.html">
+                <img src="../../assets/img/logo.png" alt="logo" id="img-logo">
+                
+                <h1>Dashboard</h1>
+            </a>
+        </div>
 
         <ul id="listado-nav">
-            <a href="index.html">
+            <a href="get.html">
                 <li class="links-header"><span>GET</span></li>
             </a>
-            <a href="index.html">
+            <a href="getById.html">
                 <li class="links-header"><span>Get : id</span></li>
             </a>
-            <a href="index.html">
+            <a href="post.html">
                 <li class="links-header"><span>POST</span></li>
             </a>
-            <a href="index.html">
+            <a href="put.html">
                 <li class="links-header"><span>PUT</span></li>
             </a>
-            <a href="index.html">
+            <a href="delete.html">
                 <li class="links-header"><span>DELETE</span></li>
             </a>
         </ul>
 
         <hr>
-        <h1>Listado de productos</h1> 
-        <hr>
-
-        <main id="contenedor-get">
-            <div id="productos-container">
-                <ul id="productos-lista">
-                    <!--
-                    <li class="li-listados productos-listados">
-                        <img src="" alt="" class="img-listados">
-                        <p>Id: / Nombre: / <strong>Precio: </strong></p>  
-                    </li>-->
-                </ul>
-            </div>
-        </main>
-
-        <script>
-            async function obtenerDatosProductos() {
-                try{
-                    //Esperamos la respuesta de la peticion GET
-                    let respuesta = await fetch("http://localhost:3000/products");
-
-                    //Transformamos la respuesta a objetos JSON
-                    let datos = await respuesta.json()
-
-                    console.table(datos);
-                    mostrarProductos(datos);
-
-                } catch(error) {
-                    console.error(error);
-                }
-
-                function mostrarProductos(array) {
-                    let listaProductos = array.payload; //Guardamos el array de productos
-                    let productos_lista = document.getElementById("productos-lista");
-                    let htmlProducto = "";
-
-                    listaProductos.fetch(producto => {
-                        htmlProducto += `
-                        <li class="li-listados productos-listados">
-                            <img src="${producto.imagen}" alt="${producto.nombre}" class="img-listados">
-                            <p>Id: ${producto.id_juego} / Nombre: ${producto.nombre} / <strong>Precio: ${producto.precio}</strong></p>  
-                        </li>`;
-                    })
-
-                    productos_lista.innerHTML = htmlProducto;
-                }
-
-                obtenerDatosProductos();
-            }
-        </script>
-
     </header>
-    
 </body>
 </html>
