--- a/pages/dashboard/get.html
+++ b/pages/dashboard/get.html
@@ -59,7 +59,7 @@
 
     <!-- Lógica -->
     <script>
-        const url = "http://localhost:3000";
+        const url = "http//localhost:3000/api";
 
         async function obtenerDatosProductos() 
         {
