--- a/pages/dashboard/getById.html
+++ b/pages/dashboard/getById.html
@@ -67,7 +67,7 @@
 
     <!-- Logica -->
     <script>
-        const url = "http://localhost:3000";
+        const url = "http//localhost:3000/api";
 
         let getProduct_form = document.getElementById("getProduct-form");
         let getId_lista = document.getElementById("getId-list");
