--- a/pages/dashboard/index.html
+++ b/pages/dashboard/index.html
@@ -42,8 +42,12 @@
                 <li class="links-header"><span>DELETE</span></li>
             </a>
         </ul>
-
         <hr>
     </header>
+
+    <!-- En ObtenerDatosProductos cambiar url http//localhost:3000/api/products
+        const url = "http//localhost:3000/api";
+        let respuesta = await fetch(`${url}/products`); 
+    -->
 </body>
 </html>
