--- a/pages/dashboard/getById.html
+++ b/pages/dashboard/getById.html
@@ -27,19 +27,19 @@
 
         <ul id="listado-nav">
             <a href="get.html">
-                <li class="links-header"><span>GET</span></li>
+                <li><span>CONSULTAR</span></li>
             </a>
             <a href="getById.html">
-                <li class="links-header"><span>Get : id</span></li>
+                <li><span>CONSULTAR por ID</span></li>
             </a>
             <a href="post.html">
-                <li class="links-header"><span>POST</span></li>
+                <li><span>AÑADIR</span></li>
             </a>
             <a href="put.html">
-                <li class="links-header"><span>PUT</span></li>
+                <li><span>MODIFICAR</span></li>
             </a>
             <a href="delete.html">
-                <li class="links-header"><span>DELETE</span></li>
+                <li><span>ELIMINAR</span></li>
             </a>
         </ul>
 
