--- a/pages/dashboard/delete.html
+++ b/pages/dashboard/delete.html
@@ -9,6 +9,7 @@
 
     <!-- Estilos -->
     <link rel="stylesheet" href="../../css/dashboard_styles/dashboard.css">
+    <link rel="stylesheet" href="../../css/dashboard_styles/delete.css">
 
     <!-- Favicon -->
     <link rel="icon" href="../../assets/img/favicon.ico" type="image/x-icon">
@@ -19,7 +20,7 @@
     <header>
         <div id="barra-principal">
             <a href="index.html">
-                <img src="../../assets/img/logo.png" alt="logo" id="img-logo">
+                <img id="img-logo" src="../../assets/img/logo.png" alt="logo">
     
                 <h1>Dashboard</h1>
             </a>
@@ -27,16 +28,16 @@
 
         <ul id="listado-nav">
             <a href="get.html">
-                <li><span>CONSULTAR</span></li>
+                <li>CONSULTAR</li>
             </a>
             <a href="getById.html">
-                <li><span>CONSULTAR por ID</span></li>
+                <li>CONSULTAR por ID</li>
             </a>
             <a href="post.html">
-                <li><span>AÑADIR</span></li>
+                <li>AÑADIR</li>
             </a>
             <a href="put.html">
-                <li><span>MODIFICAR</span></li>
+                <li>MODIFICAR</li>
             </a>
             <a href="delete.html">
                 <li><span>ELIMINAR</span></li>
@@ -70,7 +71,7 @@
 
     <!-- Lógica-->
     <script>
-        const url = "http//localhost:3000/api";
+        const url = "http://localhost:3000";
 
         let getProduct_form = document.getElementById("getProduct-form");
         let getId_lista = document.getElementById("getId-list");
