Cambiada la url

--- a/pages/dashboard/post.html
+++ b/pages/dashboard/post.html
@@ -84,7 +84,7 @@
 
     <!-- Lógica -->
     <script>
-        const url = "http://localhost:3000api";
+        const url = "http://localhost:3000/api";
         
         let altaProducts_form = document.getElementById("altaProducts-form");
 
