--- a/pages/dashboard/put.html
+++ b/pages/dashboard/put.html
@@ -73,7 +73,7 @@
 
     <!-- Lógica -->
     <script>
-        const url = "http://localhost:3000";
+        const url = "http://localhost:3000/api";
 
         // GET BY ID //
         let getProduct_form = document.getElementById("getProduct-form");
