--- a/pages/dashboard/delete.html
+++ b/pages/dashboard/delete.html
@@ -71,7 +71,7 @@
 
     <!-- Lógica-->
     <script>
-        const url = "http://localhost:3000";
+        const url = "http://localhost:3000/api";
 
         let getProduct_form = document.getElementById("getProduct-form");
         let getId_lista = document.getElementById("getId-list");
