--- a/pages/dashboard/get.html
+++ b/pages/dashboard/get.html
@@ -60,7 +60,7 @@
 
     <!-- Lógica -->
     <script>
-        const url = "http://localhost:3000";
+        const url = "http://localhost:3000/api";
 
         async function obtenerDatosProductos() 
         {
