--- a/pages/dashboard/delete.html
+++ b/pages/dashboard/delete.html
@@ -39,32 +39,39 @@
             <a href="put.html">
                 <li>MODIFICAR</li>
             </a>
-            <a href="delete.html">
+            <a id="pestaña-seleccionada" href="delete.html">
                 <li><span>ELIMINAR</span></li>
             </a>
         </ul>
 
         <hr>
-            <h2 class="titulo">Eliminar producto</h2>
-            <p class="titulo">Primero buscamos el id, luego generamos un boton para eliminar y un prompt para confirmar</p>
+            <h2><span>Eliminar producto</span></h2>
+            <p>Primero buscamos el ID, luego generamos un botón para eliminar y un prompt para confirmar.</p>
         <hr>
     </header>
 
     <!-- Contenedor principal -->
-    <main id="contenedor-get">
-        <div id="productos-container" class="crudForm-container">
+    <main>
+        <div id="productos-container">
             <h2>Consultar producto</h2>
 
             <form id="getProduct-form">
-                <label for="idProd">Id producto</label>
-                <input type="number" name="idProd" id="idProd" required>
+                <label for="idProd">ID producto</label>
+                <input id="idProd" type="number" name="idProd" required>
 
-                <input type="submit" value="Consultar producto">
+                <label for="tabla">Tabla</label>
+                <select id="tabla" name="tabla" required>
+                    <option value="juegos">Juegos</option>
+                    <option value="dlcs">DLCs</option>
+                </select>
+
+                <input id="btn-submit" type="submit" value="Consultar producto">
             </form>
         </div>
 
         <div id="getId-container">
             <ul id="getId-list">
+
             </ul>
         </div>
     </main>
@@ -98,12 +105,15 @@
                 let idProd = data.idProd.trim(); 
                 console.log(idProd);
 
+                let tablaProd = data.tabla.trim();
+                console.log(tablaProd);
+
                 //Validacion basica
-                if(!idProd) {
+                if(!tablaProd || !idProd) {
                     throw new Error(`Error en el envío de datos del formulario.`);
                 }
 
-                let response = await fetch(`${url}/products/${idProd}`);
+                let response = await fetch(`${url}/products/${tablaProd}/${idProd}`);
 
                 //Manejamos el error en una posible respuesta no existosa
                 if(!response.ok) {
@@ -134,27 +144,46 @@
 
         function mostrarProducto(producto) {
             // Le agregamos el boton que permita actualizar este producto encontrado
-            let htmlProducto = `
-                    <li class="li-listados productos-listados">
-                        <div class="li-listados_datos">
-                            <p>Id: ${producto.id_juego} / Nombre: ${producto.nombre} / <strong>Precio: $${producto.precio}</strong></p>
-                            <img src="${producto.imagen}" alt="${producto.nombre}" class="img-listados">
-                        </div>
-                        <div class="li-listados_boton">
-                            <input class="listados_boton" id="deleteProduct_button" type="button" value="Eliminar producto">
-                        </div>
+            let tabla = document.getElementById("tabla").value;
+            let htmlProducto = "";
+            let idProd;
+
+            if(tabla === "juegos")
+            {
+                idProd = producto.id_juego;
+
+                htmlProducto = `
+                <h3>Producto ID: ${producto.id_juego}</h3>
+                    <li id="producto-encontrado">
+                        <img class="img-listados" src="${producto.imagen}" alt="${producto.nombre}">
+                        <p ><span>ID:</span> ${producto.id_juego} |<span>Nombre:</span> ${producto.nombre} |<span>Precio:</span> $${producto.precio}</p>
+
                     </li>
+                    <input id="btn-eliminar" type="button" value="Eliminar producto">
                 `;
+            }
+            else if(tabla === "dlcs")
+            {
+                idProd = producto.id_dlc;
 
+                htmlProducto = `
+                <h3>Producto ID: ${producto.id_dlc}</h3>
+                    <li id="producto-encontrado">
+                        <img class="img-listados" src="${producto.imagen}" alt="${producto.nombre}">
+                        <p ><span>ID:</span> ${producto.id_dlc} |<span>Nombre:</span> ${producto.nombre} |<span>Precio:</span> $${producto.precio}</p>
+
+                    </li>
+                    <input id="btn-eliminar" type="button" value="Eliminar producto">
+                `;
+            }
+            
             getId_lista.innerHTML = htmlProducto;
-
-            let idProd = producto.id_juego;
 
             console.log(idProd);
 
-            let deleteProduct_button = document.getElementById("deleteProduct_button");
+            let btnEliminar = document.getElementById("btn-eliminar");
 
-            deleteProduct_button.addEventListener("click", function(event) {
+            btnEliminar.addEventListener("click", function(event) {
 
                 event.stopPropagation();
 
@@ -169,8 +198,10 @@
         }
 
         async function eliminarProducto(id) {
+            let tabla = document.getElementById("tabla").value;
+
             try {
-                let response = await fetch(`${url}/products/${id}`, {
+                let response = await fetch(`${url}/products/${tabla}/${id}`, {
                     method: "DELETE"
                 });
 
