--- a/pages/dashboard/getById.html
+++ b/pages/dashboard/getById.html
@@ -30,7 +30,7 @@
             <a href="get.html">
                 <li>CONSULTAR</li>
             </a>
-            <a href="getById.html">
+            <a id="pestaña-seleccionada" href="getById.html">
                 <li><span>CONSULTAR por ID</span></li>
             </a>
             <a href="post.html">
@@ -45,16 +45,21 @@
         </ul>
 
         <hr>
-            <h2>Consultar producto por ID</h2>
+            <h2><span>Consultar producto por ID</span></h2>
         <hr>
     </header>
 
     <!-- Contenedor principal -->
-    <main id="contenedor-get">
+    <main>
         <div id="productos-container">
             <form id="getProduct-form">
                 <label for="idProd">ID producto</label>
-                <input id="idProd" type="number" name="idProd" required/>
+                <input id="idProd" type="number" name="idProd" required>
+                <label for="tabla">Tabla</label>
+                <select id="tabla" name="tabla" required>
+                    <option value="juegos">Juego</option>
+                    <option value="dlcs">DLC</option>
+                </select>
                 <input id="btn-submit" type="submit" value="Consultar producto">
             </form>
         </div>
@@ -91,11 +96,14 @@
                 let idProd = data.idProd.trim();  //Eliminamos posibles espacios con .trim()
                 console.log(idProd);
 
-                if(!idProd) {
+                let tablaProd = data.tabla.trim();
+                console.log(tablaProd);
+
+                if(!tablaProd || !idProd) {
                     throw new Error(`Error en el envío de datos del formulario.`);
                 }
 
-                let response = await fetch(`${url}/products/${idProd}`);
+                let response = await fetch(`${url}/products/${tablaProd}/${idProd}`);
 
                 //Manejamos el error en una posible respuesta no existosa
                 if(!response.ok) {
@@ -114,13 +122,29 @@
                 let producto = datos.payload[0];
                 console.log(producto);
 
-                let htmlProducto = `
-                <h3>Producto = ID: ${producto.id_juego}</h3>
-                    <li id="producto-encontrado" class="li-listados productos-listados">
-                        <img class="img-listados" src="${producto.imagen}" alt="${producto.nombre}">
-                        <p><span>Nombre:</span> ${producto.nombre} | <span>Precio:</span> $${producto.precio}</p>
-                    </li>
-                `;
+                let htmlProducto = "";
+
+                if(tablaProd === "juegos")
+                {
+                    htmlProducto = `
+                        <h3>Producto = ID: ${producto.id_juego}</h3>
+                            <li id="producto-encontrado">
+                                <img class="img-listados" src="${producto.imagen}" alt="${producto.nombre}">
+                                <p><span>Nombre:</span> ${producto.nombre} | <span>Precio:</span> $${producto.precio}</p>
+                            </li>
+                            `;
+                }
+                else if(tablaProd === "dlcs")
+                {
+                    htmlProducto = `
+                        <h3>Producto = ID: ${producto.id_dlc}</h3>
+                            <li id="producto-encontrado">
+                                <img class="img-listados" src="${producto.imagen}" alt="${producto.nombre}">
+                                <p><span>Nombre:</span> ${producto.nombre} | <span>Precio:</span> $${producto.precio}</p>
+                            </li>
+                            `;
+                }
+                
 
                 getId_lista.innerHTML = htmlProducto;
 
