--- a/pages/store/inicio.html
+++ b/pages/store/inicio.html
@@ -22,8 +22,7 @@
         <h1>¡Bienvenido/a a Gamex!</h1>
 
         <form id="form-login" autocomplete="off">
-            <label>Usuario</label>
-
+            <label for="input-nombre">Usuario</label>
             <input type="text" id="input-nombre">
 
             <p id="error-msg">Debes ingresar tu usuario.</p>
